fix(side-menu): introduce temp light/dark mode var

--- a/tegel/src/components/side-menu/side-menu-vars.scss
+++ b/tegel/src/components/side-menu/side-menu-vars.scss
@@ -6,6 +6,7 @@
   --sdds-sidebar-item-state-border-focus: var(--sdds-blue-400);
   --sdds-sidebar-item-state-hover: var(--sdds-grey-100);
   --sdds-sidebar-item-state-active: var(--sdds-grey-300);
+  --sdds-sidemenu-item-state-active: var(--sdds-grey-300);
   --sdds-sidebar-item-state-selected: var(--sdds-grey-100);
 
   // TODO - Not sure why this was black before?
@@ -35,6 +36,7 @@
   --sdds-sidebar-item-state-border-focus: var(--sdds-blue-400);
   --sdds-sidebar-item-state-hover: var(--sdds-grey-868);
   --sdds-sidebar-item-state-active: var(--sdds-grey-800);
+  --sdds-sidemenu-item-state-active: var(--sdds-grey-800);
   --sdds-sidebar-item-state-selected: var(--sdds-grey-868);
   --sdds-sidebar-side-menu: var(--sdds-grey-958);
   --sdds-sidebar-side-menu-border-right: var(--sdds-grey-868);
