--- a/tegel/src/components/side-menu/webcomponent/side-menu-item/side-menu-item.scss
+++ b/tegel/src/components/side-menu/webcomponent/side-menu-item/side-menu-item.scss
@@ -38,7 +38,7 @@
     &:active {
       ::slotted(a),
       ::slotted(button) {
-        background-color: var(--sdds-grey-800);
+        background-color: var(--sdds-sidemenu-item-state-active);
       }
     }
 
